--- a/src/app/add-channels/add-channels.component.html
+++ b/src/app/add-channels/add-channels.component.html
@@ -18,19 +18,19 @@
     </div>
 
     <div class="form-check">
-      <input class="form-check-inpu m-3t" type="radio" name="flexRadioDefault" id="flexRadioDefault1" formControlName="type" value="direct">
+      <input class="form-check-inpu m-3t" type="radio" name="type" id="flexRadioDefault1" formControlName="type" value="direct">
       <label class="form-check-label m-3" for="flexRadioDefault1">
         Direct
       </label>
     </div>
     <div class="form-check">
-      <input class="form-check-input m-3" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked formControlName="type" value="shoutcast">
+      <input class="form-check-input m-3" type="radio" name="type" id="flexRadioDefault2" checked formControlName="type" value="shoutcast">
       <label class="form-check-label m-3" for="flexRadioDefault2">
         Shoucast
       </label>
     </div>
     <div class="form-check">
-      <input class="form-check-input m-3" type="radio" name="flexRadioDefault" id="flexRadioDefault3" formControlName="type" value="icecast">
+      <input class="form-check-input m-3" type="radio" name="type" id="flexRadioDefault3" formControlName="type" value="icecast">
       <label class="form-check-label m-3" for="flexRadioDefault3">
         Icecast
       </label>
